--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,22 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
+    "cometd": "^7.0.2",
+    "parse-address": "^1.1.2",
     "react": "^17.0.2",
+    "react-async-script-loader": "^0.3.0",
     "react-dom": "^17.0.2",
+    "react-modal": "^3.13.1",
+    "react-places-autocomplete": "^7.3.0",
+    "react-redux": "^7.2.3",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.3.0",
+    "serve": "^11.3.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
