--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,8 @@
 		"@testing-library/user-event": "^12.8.3",
 		"axios": "^0.21.1",
 		"cometd": "^7.0.2",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
 		"parse-address": "^1.1.2",
 		"react": "^17.0.2",
 		"react-async-script-loader": "^0.3.0",
