--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "schedule-sync",
-	"version": "1.3.0",
+	"version": "1.4.0",
 	"description": "Mapping Acuity schedules for the masses",
 	"main": "server.js",
 	"scripts": {
@@ -9,6 +9,7 @@
 		"server": "nodemon server",
 		"client": "npm run start --prefix client",
 		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"seeder": "node seeder -d",
 		"heroku-postbuild": "npm install --prefix client && npm run build --prefix client"
 	},
 	"keywords": [
