Syncing a lot of testing changes

--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
 		"cometd": "^7.0.2",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.6",
+		"enzyme-to-json": "^3.6.2",
+		"fetch-mock": "^9.11.0",
 		"parse-address": "^1.1.2",
 		"react": "^17.0.2",
 		"react-async-script-loader": "^0.3.0",
@@ -22,8 +24,10 @@
 		"react-scripts": "4.0.3",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.9",
+		"redux-mock-store": "^1.5.4",
 		"redux-thunk": "^2.3.0",
 		"serve": "^11.3.2",
+		"sinon": "^10.0.0",
 		"uuid": "^8.3.2",
 		"web-vitals": "^1.1.1"
 	},
